# clapgodotnavdemo

./: .gitignore  README.md
godot_src/: export_presets.cfg  icon.svg.import  project.godot  ui_level.tscn
godot_src/Main Scenes/: camera_collider_controller.gd  dungeon_scene.tscn  park_scene.tscn  ui_level.tscn
godot_src/Scene Scripts/: LinesController.gd  LinesController.gd.uid  camera_collider_controller.gd  camera_collider_controller.gd.uid
godot_src/UI Instances/: Level Select.tscn  Main Menu.tscn  Options.tscn  Scene_Inprogress.tscn  Scene_Loading.tscn  Scene_Post.tscn  Scene_Start.tscn  captureFinishHandler.gd  captureFinishHandler.gd.uid  keyremap_button.gd  keyremap_button.gd.uid  load_scene_button.gd  post menu button.gd  save_scene_button.gd  skip button.gd
godot_src/UI Scripts/: Globals.gd  Globals.gd.uid  LinesToggle.gd  LinesToggle.gd.uid  captureFinishHandler.gd  delete_dir_button.gd  delete_dir_button.gd.uid  dir_Name_line_edit.gd  dir_Name_line_edit.gd.uid  final Pos Label.gd  final Pos Label.gd.uid  frametracker_label.gd  frametracker_label.gd.uid  game_controller.gd  game_controller.gd.uid  interval_slider.gd  interval_slider.gd.uid  keyremap_button.gd  levelselect_button.gd  levelselect_button.gd.uid  load_scene_button.gd  load_scene_button.gd.uid  manualLoadButton.gd  manualLoadButton.gd.uid  player_animation controller.gd  player_animation controller.gd.uid  post menu button.gd  post menu button.gd.uid  save_scene_button.gd  save_scene_button.gd.uid  sceneLoader.gd  (+9 more)
opencv_src/: CMakeLists.txt  PhotoMatcher.cpp  PhotoMatcher.h  main.cpp
(+55 files in other folders)
